--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ body {
 /* .navigated-sections   */
 .navigated-sections {
   position: relative;
-  min-height: 900vh;
+  /* min-height: 900vh; */
 }
 
 .navigated-sections__nav {
@@ -129,5 +129,71 @@ body {
 .navigated-sections__section-content--location iframe {
     width:100%;
     position: relative;
+}
+
+.navigated-sections__section-content--location-slider{
+  padding:32px 0;
+  display:flex;
+  gap:32px;
+  @media only screen and (max-width: 991px) {
+    flex-direction: column;
+  }
+}
+.navigated-sections__section-content--location-slider div:first-of-type{
+  min-width: 200px;
+}
+.navigated-sections__section-content--location-slider div:first-of-type h4 {
+  font-size:18px;
+  text-transform:capitalize;
+  font-weight: 600;
+  margin-bottom:12px;
+}
+.navigated-sections__section-content--location-slider div:first-of-type p {
+  font-size:13px;
+  max-width: 200px;
+}
+
+.navigated-sections__section-content--location-card {
+  background-color: hsla(0,0%,100%,.05);
+  padding:20px;
+  border-radius: 0 0 24px 0;
+  min-width: 200px
+}
+.navigated-sections__section-content--location-card > div:first-of-type{
+  display:flex;
+  gap:12px;
+  align-items: flex-end;
+  margin-bottom:12px;
+}
+.navigated-sections__section-content--location-card > div:first-of-type h2{
+  font-size:44px;
+  font-weight: 600;
+  margin-bottom:0;
+}
+.navigated-sections__section-content--location-card > div:first-of-type h6{
+  font-size:13px;
+  font-weight: 100;
+}
+
+/* Custom Swiper navigation arrows for location slider */
+.location-swiper-button-next, .location-swiper-button-prev {
+  /* background: var(--primary-color); */
+  color: #2c3339;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  /* box-shadow: 0 2px 8px rgba(0,0,0,0.15); */
+  transition: background 0.2s, color 0.2s;
+}
+.location-swiper-button-next:hover, .location-swiper-button-prev:hover {
+  /* background: #fff; */
+  color: var(--primary-color);
+}
+.location-swiper-button-next::after, .location-swiper-button-prev::after {
+  display: none;
 }
 
