--- a/css/main.css
+++ b/css/main.css
@@ -11,9 +11,9 @@
 }
 
 body {
-  font-family: "Poppins", sans-serif;
-  background-color: var(--bg-color);
-  color: #fff;
+  font-family: "Poppins", sans-serif !important;
+  background-color: var(--bg-color) !important;
+  color: #fff !important;
 }
 
 .container {
@@ -196,4 +196,318 @@ body {
 .location-swiper-button-next::after, .location-swiper-button-prev::after {
   display: none;
 }
+
+.navigated-sections__contact {
+  /* background-color: var(--bg-color); */
+  padding: 4rem 0;
+}
+
+
+.navigated-sections__contact-info {
+  text-align: center;
+}
+
+.navigated-sections__contact-info h2 {
+  font-size: 2.5rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+
+.navigated-sections__contact-info h2 span {
+  color: var(--primary-color);
+  font-family: Sacramento,Droid Arabic Kufi,Arial,sans-serif;
+}
+
+.navigated-sections__contact-form {
+}
+
+.navigated-sections__contact-form form {
+    width: 70%;
+    margin: 4em auto 0;
+    padding: 7em;
+    border-radius: 0 0 7rem 0;
+    background: #373d43;
+}
+
+.navigated-sections__contact-form form .form-group {
+    width: 100%;    
+    margin-bottom: 1.5rem;
+}
+
+.navigated-sections__contact-form form input, 
+.navigated-sections__contact-form form textarea,
+.navigated-sections__contact-form form select {
+    border: 1px solid #656565;
+    border-radius: .7rem;
+    background-color: transparent;
+    width: 100%;
+    padding: .7rem 1rem;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    font-size: 16px;
+    color: #fff;
+    font-weight: 400;
+}
+
+.navigated-sections__contact-form form input::placeholder,
+.navigated-sections__contact-form form textarea::placeholder {
+    color: #888;
+    font-size: 16px;
+}
+
+.navigated-sections__contact-form form .form-group-checkbox label {
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.navigated-sections__contact-form form .form-group span {
+    font-size: 12px;
+    text-align: end;
+    display: flex;
+    justify-content: end;
+    color: #cecece8a;
+    font-weight: 400;
+}
+
+.navigated-sections__contact-form form .form-group-checkbox {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1rem;    
+}
+
+.navigated-sections__contact-form form .form-group-checkbox label {
+    font-size: 16px;
+    font-weight: 400;
+    color: #656565;
+}
+
+.navigated-sections__contact-form form .form-group-checkbox label a {
+    color: var(--primary-color);
+    text-decoration: none;
+}
+
+.navigated-sections__contact-form form .form-group-checkbox label a:hover {
+    color: var(--primary-color);
+}
+
+.navigated-sections__contact-form form .form-group-checkbox input {
+    height: 20px;
+    width: 20px;
+    background-color: transparent;
+    border: 2px solid #5a5a5a;
+}
+
+.navigated-sections__contact-form form select {
+    color: #888;
+    font-size: 16px;
+}
+
+.navigated-sections__contact-form form .form-group-button {
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    margin-top: 2rem;
+}
+
+.navigated-sections__contact-form form .send-button {
+    background-color: var(--primary-color);
+    color: #4c5358;
+    font-size: 14px;
+    font-weight: 600;
+    border: none;
+    padding: .5rem 4rem;
+    border-radius: 50px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    width: fit-content;
+    justify-content: end;
+    gap: 1rem;
+}
+
+.video-thumbnail {
+  position: relative;
+  display: inline-block;
+  /* border: 4px solid #333; */
+  border-radius: 0 0 120px 0;
+  cursor: pointer;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, #2c3339, rgba(17, 17, 17, 0));
+}
+
+.video-thumbnail::after {
+  content: "";
+  position: absolute;
+  left: 0; right: 0; bottom: 0;
+  height: 50%; /* Adjust as needed */
+  background: linear-gradient(0deg, #2c3339, rgba(17, 17, 17, 0)); /* Or use a background-image here */
+  pointer-events: none;
+  z-index: 2;
+  border-radius: 0 0 120px 0;
+}
+
+.video-thumbnail img {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+.play-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 3;
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
+  border: 1px solid #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translate(-50%, -50%);
+  font-size: 34px;
+  color: white;
+}
+
+/* Modal Styles */
+.modal-video {
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  left: 0; top: 0;
+  width: 100vw; height: 100vh;
+  background: rgba(0,0,0,0.7);
+  justify-content: center;
+  align-items: center;
+}
+.modal-video .modal-content {
+  position: relative;
+  width: 90vw;
+  height: 90vh;
+  background: #000;
+  border-radius: 16px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.modal-video .close-modal {
+  position: absolute;
+  top: 12px;
+  right: 24px;
+  font-size: 32px;
+  color: #fff;
+  cursor: pointer;
+  z-index: 2;
+}
+.modal-video iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+  border-radius: 8px;
+}
+
+.navigated-sections__section--project-materials {
+  padding: 5rem 0;
+}
+
+.navigated-sections__section-content--project-materials h2 {
+  font-size: 2.5rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+
+.construction-update-slider {
+  width: 100%;
+  height: 100%;
+}
+
+.construction-update-slider .swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.construction-update-slider .swiper-slide {
+  width: 100%;
+  height: 100%;
+}
+
+.construction-update-slider .swiper-slide::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, #2c3339, rgba(17, 17, 17, 0)); /* Or use a background-image here */
+  pointer-events: none;
+  z-index: 2;
+  border-radius: 0 0 120px 0;
+}
+
+.construction-update-slider .swiper-slide img {
+  width: 100%;
+  height: 350px;
+  /* height: 100%; */
+  border-radius: 0 0 120px 0;
+  object-fit: cover;
+}
+
+.construction-update-slider .swiper-button-next,
+.construction-update-slider .swiper-button-prev {
+  color: #fff;
+  background-color: #2c3339;
+  border-radius: 50%;
+}
+
+.construction-update-slider .swiper-button-next {
+  right: 0;
+}
+
+.construction-update-slider .swiper-button-prev {
+  left: 0;
+}   
+
+.construction-update-slider .construction-update-slider-pagination {
+  bottom: 0;
+  width: fit-content !important;
+}
+
+.construction-update-slider .swiper-pagination-bullet {
+    background-color: #fff;
+    width: 8px;
+    height: 8px;
+    display: inline-block;
+    border-radius: 50%;
+    opacity: .2;
+}
+
+.construction-update-slider .swiper-pagination-bullet-active {
+  background-color: #fff;
+  opacity: 1;
+}
+
+
+.swiper-slide-text {
+    text-align: center;
+    /* margin: 12px 0; */
+    font-size: 14px;
+    color: #fff;
+    width: fit-content;
+    white-space: nowrap;
+    /* font-weight: bold; */
+}
+
+
+
+
+
+
+
+
+
+
+
 
