--- a/css/main.css
+++ b/css/main.css
@@ -500,6 +500,126 @@ body {
     /* font-weight: bold; */
 }
 
+.navigated-sections__section--tab {
+  padding: 5rem 0;
+  position: relative;
+}
+
+.navigated-sections__section--tab h2 {
+  font-size: 32px;
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+
+.navigated-sections__section--tab .navigated-sections__section--tab-links .nav-link {
+  color: #fff !important;
+  background-color: transparent !important;
+  border-radius: 50px !important;
+  padding: 10px 30px !important;
+  font-size: 16px !important;
+  font-weight: 600 !important;
+  margin-bottom: 1rem !important;
+}
+
+.navigated-sections__section--tab .navigated-sections__section--tab-links .nav-link.active {
+    color: #fac25a !important;
+    background-color: #fac25a14 !important;
+    border-radius: 50px !important;
+    font-weight: 600 !important;
+    margin-bottom: 1rem !important;
+}
+
+.navigated-sections__section--tab .tab-content .tab-pane {
+  position: relative;
+}
+
+.navigated-sections__section--tab .tab-content .tab-pane img {
+  width: 80%;
+  height: 350px;
+  margin-left: 10%;
+  border-radius: 0 0 120px 0;
+  object-fit: cover;
+}
+
+.navigated-sections__section--tab .tab-content .tab-pane .nav-tabs {
+  border-bottom: 1px solid #ffffff2a;
+  /* margin-bottom: 1rem; */
+  width: 80%;
+  margin-left: auto;
+  /* margin-right: auto; */
+}
+
+.navigated-sections__section--tab .tab-content .tab-pane .nav-tabs .nav-link {
+  color: #ffffff70;
+  font-size: 18px;
+  font-weight: 400;
+  padding: 0 15px;
+  background-color: transparent;
+}
+
+
+.navigated-sections__section--tab .tab-content .tab-pane .nav-tabs .nav-link.active {
+  color: var(--primary-color);
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid var(--primary-color);
+}
+
+.navigated-sections__section--tab .tab-content .tab-pane .tab-content {
+  padding: 2rem 0;
+}
+
+.navigated-sections__section--tab .tab-content .tab-pane .tab-content .tab-pane {
+  padding: 2rem 0;
+}
+
+.navigated-sections__section--tab .tab-content .tab-pane .tab-content .tab-pane h4 {
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+
+
+.tab-arrow-prev, .tab-arrow-next {
+    font-size: 2.5rem;
+    text-decoration: none;
+    color: var(--primary-color);
+    font-weight: 600;
+    background: none;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 100;
+}
+
+.tab-arrow-prev {
+  left: 0;
+}
+
+.tab-arrow-next {
+  right: 0;
+}
+
+.tab-arrow-prev:disabled, .tab-arrow-next:disabled {
+    color: #ccc !important;
+    cursor: not-allowed;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
