--- a/css/main.css
+++ b/css/main.css
@@ -608,6 +608,106 @@ body {
     cursor: not-allowed;
 }
 
+.navigated-sections__section--project-amenities {
+  padding: 0 0 5rem 0;
+}
+
+.card-Amenities {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+
+.navigated-sections__section--project-amenities h2 {
+  font-size: 32px;
+  font-weight: 600;
+  margin-bottom: 3rem;
+}
+
+.card-Amenities__card {
+  /* width: 25%; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  gap: .6rem;
+  text-decoration: none;
+  padding: 0 1rem;
+}
+
+.card-Amenities__card:hover .card-Amenities__card-image {
+    position: relative;
+    top: -10px;
+    transition: top 0.3s ease;
+}
+
+.card-Amenities__card:hover .card-Amenities__card-content {
+    top: -10px;
+    transition: top 0.7s ease;
+}
+
+.card-Amenities__card-image {
+    position: relative;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    transition: top 0.3s ease;
+}
+
+.card-Amenities__card-image img {
+    width: 59px;
+    height: 59px;
+    object-fit: cover;
+}
+
+.card-Amenities__card-content {
+    position: relative;
+    top: 0;
+  width: 100%;
+  height: 100%;
+  transition: top 0.3s ease;
+}
+
+.card-Amenities__card-content h3 {
+  font-size: 16px;
+  font-weight: 300;
+  margin-bottom: 1rem;
+  color: #fff;
+}
+
+.navigated-sections__section--project-materials {
+    padding: 0 0 5rem 0;
+}
+
+.navigated-sections__section--project-materials .card-Amenities__card .card-Amenities__card-content h3 {
+    color: #fac25a;
+}
+
+.navigated-sections__section--project-materials h2 {
+    font-size: 32px;
+    font-weight: 600;
+    margin-bottom: 3rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
