--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@ border-radius: 10px;
 
 .navigated-sections__nav {
   position: sticky;
-  top: 0;
+  top: 70px;
   left: 0;
   width: 100%;
   z-index: 100;
@@ -143,6 +143,10 @@ border-radius: 10px;
     top: 20px;
 
 }
+.navigated-sections__section-content--location{
+  position: relative;
+  overflow: hidden;
+}
 .navigated-sections__section-content--location iframe {
     width:100%;
     position: relative;
@@ -152,9 +156,9 @@ border-radius: 10px;
   padding:32px 0;
   display:flex;
   gap:32px;
-  @media only screen and (max-width: 991px) {
+  /* @media only screen and (max-width: 991px) {
     flex-direction: column;
-  }
+  } */
 }
 .navigated-sections__section-content--location-slider div:first-of-type{
   min-width: 200px;
@@ -190,6 +194,10 @@ border-radius: 10px;
 .navigated-sections__section-content--location-card > div:first-of-type h6{
   font-size:13px;
   font-weight: 100;
+}
+
+.location-swiper {
+  width: 100%;
 }
 
 /* Custom Swiper navigation arrows for location slider */
@@ -718,7 +726,7 @@ border-radius: 10px;
   position: relative;
   top: -4rem;
   left: 1rem;
-  z-index: 100;
+  z-index: 10;
 }
 
 .navigated-sections__section--project-interiors .project-interiors__image {
@@ -971,7 +979,7 @@ div.marquee > h2 {
 
 .navigated-sections__nav {
   position: sticky;
-  top: 0;
+  top: 70px;
   left: 0;
   width: 100%;
   z-index: 100;
@@ -1091,20 +1099,26 @@ html {
 }
 
 .navbar {
-  position: relative;
-  /* top: 0;
-  left: 0; */
+  position: absolute !important;
   width: 100%;
   z-index: 100;
+  background-color: transparent;
+  height: 70px;
+  transition: all 0.3s ease;
+}
+
+.navbar.active {
+  position: fixed !important;
+  background-color: #2c3339;
   box-shadow: 0 0 15px rgba(83, 83, 83, .6);
-  height: 80px;
+  transition: all 0.3s ease;
 }
 
 .navbar__wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 0;
+  /* padding: 1rem 0; */
   width: 100%;
 }
 
@@ -1122,8 +1136,200 @@ html {
   display: flex;
   align-items: center;
   gap: 10px;
+  color: #fff;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 500;
+  transition: all 0.3s ease;
 }
 
+.navbar__contact a:hover {
+  color: #fac25a;
+}
+
+.hero {
+  position: relative;
+  z-index: 1;
+  height: 80vh;
+}
+
+.hero__overlay {
+  position: absolute;
+  bottom: 2rem;
+  left: 10%;
+  z-index: 10;
+}
+
+.hero__overlay h1 {
+  font-size: 46px;
+  font-weight: bold;
+  color: #FFF;
+}
+
+.hero__overlay h2 {
+  color: var(--primary-color);
+  font-size: 52px;
+  position: relative;
+  top: -2rem;
+  font-family: Sacramento,Droid Arabic Kufi,Arial,sans-serif;
+}
+
+
+
+/* .hero-swiper {
+  position: relative;
+  z-index: 1;
+} */
+
+/* .hero-swiper-button-next, .hero-swiper-button-prev {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  border-radius: 50px;
+  z-index: 1;
+} */
+
+.hero-swiper-button-next, .hero-swiper-button-prev {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  border-radius: 50px;
+  z-index: 1;
+  width: 60px;
+  border-radius: 50px;
+  height: 300px;
+  overflow: hidden;
+}
+
+.hero-swiper-button-next {
+  cursor: pointer;
+  left: 0;
+}
+
+.hero-swiper-button-prev {
+  cursor: pointer;
+  right: 0;
+}
+
+.hero-swiper-button-next img, .hero-swiper-button-prev img {
+  width: 60px;
+  border-radius: 50px;
+  height: 300px;
+  object-fit: cover;
+  cursor: pointer;
+  position: relative;
+  transition: all 0.3s ease;
+}
+
+.hero-swiper-button-next img {
+  right: 100%;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: all 0.3s ease;
+  /* display: none; */
+}
+
+.hero-swiper-button-prev img {
+  left: 100%;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: all 0.3s ease;
+  /* display: none; */
+}
+
+.hero-swiper-button-next:hover, .hero-swiper-button-prev:hover {
+  transform: translateY(-50%) scale(1.1);
+}
+
+.hero-swiper-button-next:hover img, .hero-swiper-button-prev:hover img {
+  transform: translateY(-50%) scale(1.1);
+}
+
+.hero-swiper-button-next:hover img {
+  right: 0;
+  /* display: block;  */
+  transition: all 0.3s ease;
+}
+
+.hero-swiper-button-prev:hover img {
+  left: 0;
+  /* display: block; */
+  transition: all 0.3s ease;
+}
+
+.hero-swiper {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
+.hero-swiper-slide {
+  width: 100% !important;
+  height: 100%;
+  overflow: hidden;
+  object-fit: cover;
+}
+
+.hero-swiper-slide::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, #2c3339, rgba(17, 17, 17, 0)); /* Or use a background-image here */
+  pointer-events: none;
+  z-index: 2;
+  /* border-radius: 0 0 120px 0; */
+}
+
+.hero-swiper-slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+
+
+
+@media (max-width: 768px) {
+  .hero-swiper-button-next, .hero-swiper-button-prev {
+    display: none;
+  }
+  .hero__overlay {
+    left: 1rem;
+    bottom: 0;
+  }
+  .hero__overlay h1 {
+    font-size: 32px;
+  }
+  .hero__overlay h2 {
+    font-size: 32px;
+  }
+  .navigated-sections__section-content--about {
+    padding: 0;
+    flex-direction: column;
+  }
+  .navigated-sections__section-content--about .navigated-sections__section-content--about-image {
+    width: 100%;
+    height: 100%;
+  }
+  .navigated-sections__nav {
+    display: none;
+  }
+  .navigated-sections__contact-form form {
+    width: 94%;
+    padding: 2rem 3rem;
+  }
+  .navigated-sections__section-content--location-slider {
+    flex-direction: column;
+  }
+  .navigated-sections__section-content--location-slider .navigated-sections__section-content--location-slider-image {
+    width: 100%;
+    height: 100%;
+  }
+}
 
 
 
